Projet 3 dernière version

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -18,7 +18,8 @@
             <a href="/index.html">
                 <div>&ensp;&ensp;&ensp;<i class="fa-solid fa-arrow-left"></i></div>
             </a>&ensp;&ensp;&ensp;&ensp;&ensp;
-            <div class=" logo noir"><img src="/images/ohmyfood-logo.png" alt="Logo Oh my food">
+            <div class=" logo noir"><img src="https://stepheniki.github.io/Projet3/images/ohmyfood-logo.png"
+                    alt="Logo Oh my food">
             </div>
         </div>
     </header>
@@ -27,7 +28,8 @@
     <section class="fond">
 
         <div>
-            <img class="decalage" src="/images/a_la_francaise_menu.jpg" alt="Restaurant À la française">
+            <img class="decalage" src="https://stepheniki.github.io/Projet3/images/a_la_francaise_menu.jpg"
+                alt="Restaurant À la française">
         </div>
         <div class="menu fond">
             <div class="container-menu">
@@ -192,7 +194,8 @@
 
     <footer>
         <div class="fond black">
-            <div class="logo blanc">&ensp; <img src="/images/ohmyfood@2x.svg" alt="Logo Oh my food">
+            <div class="logo blanc">&ensp; <img src="https://stepheniki.github.io/Projet3/images/ohmyfood@2x.svg"
+                    alt="Logo Oh my food">
             </div>
             <ul>
                 <li><a href="#"><i class="fa-solid fa-utensils "></i>&ensp;Proposer un restaurant</a></li>
