--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="conteneur-header-accueil">
             <div class="logo noir">
-                <img src="/images/ohmyfood-logo.png" alt="Logo Oh my food">
+                <img src="https://stepheniki.github.io/Projet3/images/ohmyfood-logo.png" alt="Logo Oh my food">
             </div>
         </div>
     </header>
@@ -96,7 +96,8 @@
             <a href="la-palette-du-gout.html">
                 <div class="card">
 
-                    <img src="/images/palette_du_gout.jpg" alt="La palette du goût à Ménilmontant">
+                    <img src="https://stepheniki.github.io/Projet3/images/palette_du_gout.jpg"
+                        alt="La palette du goût à Ménilmontant">
                     <div class="button-nouveau">Nouveau
                     </div>
                     <div>
@@ -113,7 +114,8 @@
 
             <a href="la-note-enchantee.html">
                 <div class="card">
-                    <img src="/images/la_note_enchantee.jpg" alt="La Note Enchantée">
+                    <img src="https://stepheniki.github.io/Projet3/images/la_note_enchantee.jpg"
+                        alt="La Note Enchantée">
                     <div class="button-nouveau">Nouveau</div>
                     <div class="icone-coeur">
                         <i class="fa fa-regular fa-heart  fa-hover-hidden"></i>
@@ -128,7 +130,7 @@
 
             <a href="a-la-francaise.html">
                 <div class="card">
-                    <img src="/images/a_la_francaise.jpg" alt="À la française">
+                    <img src="https://stepheniki.github.io/Projet3/images/a_la_francaise.jpg" alt="À la française">
                     <div class="icone-coeur">
                         <i class="fa fa-regular fa-heart  fa-hover-hidden"></i>
                         <i class="fa fa-solid fa-heart  fa-hover-show"></i>
@@ -142,7 +144,8 @@
 
             <a href="le-delice-des-sens.html">
                 <div class="card">
-                    <img src="/images/le_delice_des_sens.jpg" alt="Le Délice des sens">
+                    <img src="https://stepheniki.github.io/Projet3/images/le_delice_des_sens.jpg"
+                        alt="Le Délice des sens">
                     <div class="icone-coeur">
                         <i class="fa fa-regular fa-heart  fa-hover-hidden"></i>
                         <i class="fa fa-solid fa-heart  fa-hover-show"></i>
@@ -160,7 +163,8 @@
 
     <footer>
         <div class="fond black">
-            <div class="logo blanc">&ensp; <img src="/images/ohmyfood@2x.svg" alt="Logo Oh my food">
+            <div class="logo blanc">&ensp; <img src="https://stepheniki.github.io/Projet3/images/ohmyfood@2x.svg"
+                    alt="Logo Oh my food">
             </div>
             <ul>
                 <li><a href="#"><i class="fa-solid fa-utensils "></i>&ensp;Proposer un restaurant</a></li>
