checkbox apparition progressive lien index ok loading spinner sans scroll

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="conteneur-header">
-            <a href="/index.html">
+            <a href="index.html">
                 <div>&ensp;&ensp;&ensp;<i class="fa-solid fa-arrow-left"></i></div>
             </a>&ensp;&ensp;&ensp;&ensp;&ensp;
             <div class=" logo noir"><img src="https://stepheniki.github.io/Projet3/images/ohmyfood-logo.png"
